Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -29,9 +29,6 @@
       <div class="inner clearfix">
         <section id="main-content">
           <h1>
-<a name="kappak" class="anchor" href="#kappak"><span class="octicon octicon-link"></span></a>kappak</h1>
-
-<h1>
 <a name="introduction" class="anchor" href="#introduction"><span class="octicon octicon-link"></span></a>Introduction</h1>
 
 <p>This is a homemade LaTeX package regrouping functionalities I deem handy. It is provided under the <a href="http://opensource.org/licenses/MIT">MIT</a> license.</p>
@@ -80,6 +77,11 @@ git clone https://github.com/altaris/kappak.git
 <a name="linux" class="anchor" href="#linux"><span class="octicon octicon-link"></span></a>Linux</h3>
 
 <p>Copy <code>kappak.sublime-completions</code> in <code>~/.config/sublime-text-2/Packages/User/kappak.sublime-completions</code>.</p>
+
+<h1>
+<a name="wiki" class="anchor" href="#wiki"><span class="octicon octicon-link"></span></a>Wiki</h1>
+
+<p><a href="https://github.com/altaris/kappak/wiki">Here</a>.</p>
         </section>
 
         <aside id="sidebar">
